--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,108 @@
 /*******GENERALES******/
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+ul, ol {
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+body {
+  margin-bottom: 80px;
+}
+
+/*******PAGINA HOME******/
+
+/**HEADER Y FOOTER**/
+
+header {
+  width: 100%;
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  width: 200px;
+  height: 80px;
+}
+
+.navigation {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 80px;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.menu,
+.user {
+  display: flex;
+  align-items: center;
+}
+
+.navigation li {
+  margin: 0 10px;
+}
+.navigation li a {
+  color: black;
+}
+
+.mobile-menu {
+  display: none;
+  width: 20px;
+  margin-left: 20px;
+  padding: 19px 0;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+}
+
+.search {
+  width: 600px;
+  height: 30px;
+  border: solid 1px #ccc;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  padding: 0 10px;
+}
+
+.search-button {
+  width: 100px;
+  height: 30px;
+  border: solid 1px #ccc;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+  background-color: #ffffff;
+  padding: 20px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
