--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 
 /*******PAGINA HOME******/
 
-/**HEADER Y FOOTER**/
+/**header y footer**/
 
 header {
   width: 100%;
@@ -106,3 +106,82 @@ header {
   left: 0;
   width: 100%;
 }
+
+/**recetas home**/
+
+.container-products {
+  width: 90%;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+  background: #ffffff;
+  padding: 20px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+}
+.product-card {
+  background-color: white;
+  width: 20%;
+  border: 1px solid black;
+}
+.product-details {
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.product-details p {
+  margin-top: 10px;
+  width: 100%;
+  word-wrap: break-word;
+  text-align: center;
+}
+
+.receta-name {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.product-details img {
+  max-width: 100%;
+}
+
+.product-actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.product-actions a {
+  border-radius: 4px;
+  text-decoration: underline;
+  gap: 10px;
+}
+
+.add-more {
+  margin: 20px auto;
+  width: 100px;
+  height: 30px;
+  border: solid 1px black;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+
