--- a/css/styles.css
+++ b/css/styles.css
@@ -181,6 +181,45 @@ header {
   align-items: center;
 }
 
+/********PAGINA RECETA********/
+
+.container-details img {
+  border: solid 1px black;
+  padding: 2px;
+}
+.container-details {
+  border: solid 1px black;
+  width: 60%;
+  height: 300px;
+  margin: auto;
+  margin-top: 80px;
+  margin-bottom: 20px;
+  display: flex;
+  gap: 20px;
+}
+
+.container-details article {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 20px;
+  padding: 0 10px;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.categorias {
+  font-weight: bold;
+}
+
+.categorias a {
+  color: black;
+  font-weight: normal;
+}
+
+
 
 
 
