--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,59 @@ header {
   font-weight: normal;
 }
 
+/********PAGINA CATEGORIES********/
 
+.main-categorias {
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.title-categorias {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.tag-name a {
+  color: black;
+}
+
+.container-tags {
+  width: 90%;
+  margin: auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 50px;
+  background: #ffffff;
+  padding: 20px;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.container-tags article {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: solid 1px black;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 20px;
+  background: #ffffff;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.tag-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
 
 
