Creación página category: html, js, mismos estilos que las recetas de la home

--- a/css/styles.css
+++ b/css/styles.css
@@ -107,7 +107,7 @@ header {
   width: 100%;
 }
 
-/**recetas home**/
+/**recetas home**/ /**Tambien en categories y search-results**/
 
 .container-products {
   width: 90%;
