--- a/css/styles.css
+++ b/css/styles.css
@@ -340,7 +340,7 @@ header {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  text-align:
+  text-align: center;
 }
 
 .checkbox-terms {
@@ -351,5 +351,100 @@ header {
 .label-checkbox {
   margin-left: 5px;
 }
+
+
+/* Resoluciones menores a 1024px */
+@media (max-width: 1024px) {
+  header {
+    flex-direction: row;
+    align-items: center;
+  }
+  .search {
+    width: 90%;
+  }
+
+  .product-card {
+    width: 25%;
+  }
+
+  .container-products {
+    gap: 60px;
+  }
+
+  .container-details {
+    width: 95%;
+    margin-top: 50px;
+  }
+}
+
+/* Resoluciones menores a 768px */
+@media (max-width: 768px) {
+  header {
+    padding: 10px;
+    height: 80px;
+  }
+
+  .navigation {
+    display: none;
+  }
+
+  .logo {
+    width: 150px;
+    height: auto;
+    position: absolute;
+    /* Centrar el logo horizontal y verticalmente (no encontré otra forma de hacerlo)*/
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  .mobile-menu {
+    width: 40px;
+    display: block;
+    margin-left: auto;
+  }
+
+  .search,
+  .search-form,
+  .menu,
+  .user {
+    display: none;
+  }
+
+  .product-card {
+    width: 40%;
+  }
+
+  .container-products {
+    gap: 60px;
+  }
+
+  .container-details {
+    flex-direction: column;
+    width: 70%;
+    text-align: center;
+    height: 60vh;
+    overflow: auto;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 480px) {
+  .container-details {
+    width: 90%;
+  }
+
+  .product-card {
+    width: 90%;
+  }
+
+  .column-medium {
+    width: 100%;
+  }
+
+  .row-center {
+    width: 90%;
+  }
+}
+
 
 
