--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,10 @@ a {
 }
 
 body {
-  margin-bottom: 80px;
+  
 }
+
+
 
 /*******PAGINA HOME******/
 
@@ -53,8 +55,7 @@ header {
   font-style: normal;
 }
 
-.menu,
-.user {
+.menu, .user {
   display: flex;
   align-items: center;
 }
@@ -94,21 +95,20 @@ header {
 }
 
 .footer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 50px;
+  display: block;
   background-color: #ffffff;
   padding: 20px;
   box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.5);
-  position: fixed;
   bottom: 0;
-  left: 0;
+  position: fixed;
   width: 100%;
+  text-align: center;
 }
 
 /**recetas home**/ /**Tambien en categories y search-results**/
-
+.main-home {
+  margin-bottom: 100px;
+}
 .container-products {
   width: 90%;
   margin: auto;
@@ -183,27 +183,50 @@ header {
 
 /********PAGINA RECETA********/
 
-.container-details img {
-  border: solid 1px black;
-  padding: 2px;
-}
-.container-details {
-  border: solid 1px black;
-  width: 60%;
-  height: 300px;
-  margin: auto;
-  margin-top: 80px;
-  margin-bottom: 20px;
-  display: flex;
-  gap: 20px;
+.container-receta {
+  height: 100vh;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  gap: 20px; 
+  border: 1px solid #ccc; 
+  border-radius: 8px; 
+  background-color: #f9f9f9; 
 }
 
-.container-details article {
-  display: flex;
-  flex-direction: column;
+.container-details {
+  width: 80%;
+  display: flex; 
   gap: 20px;
-  margin-top: 20px;
-  padding: 0 10px;
+  border: solid 1px black;
+  padding: 10px;
+}
+
+.container-img-receta {
+  display: flex;
+
+}
+
+.img-receta-detalle {
+  width: 100%; 
+  height: auto; 
+  border-radius: 8px; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+article {
+  display: flex; 
+  flex-direction: column; 
+  gap: 10px; 
+}
+
+.name-receta-detalle {
+  font-size: 30px;
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+}
+
+.preparation, .cook-time, .categorias {
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -211,13 +234,14 @@ header {
 }
 
 .categorias {
-  font-weight: bold;
+  font-style: italic;
+  color: #777;
 }
 
 .categorias a {
-  color: black;
-  font-weight: normal;
+  color: blue;
 }
+
 
 /********PAGINA CATEGORIES********/
 
@@ -279,16 +303,17 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+}
+
+.container-forms{
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center ;
 }
 
 .column-medium {
@@ -377,7 +402,6 @@ header {
   }
 }
 
-/* Resoluciones menores a 768px */
 @media (max-width: 768px) {
   header {
     padding: 10px;
@@ -385,56 +409,76 @@ header {
   }
 
   .navigation {
-    display: none;
+    
   }
 
   .logo {
     width: 150px;
     height: auto;
-    position: absolute;
-    /* Centrar el logo horizontal y verticalmente (no encontré otra forma de hacerlo)*/
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 
-  .mobile-menu {
-    width: 40px;
-    display: block;
-    margin-left: auto;
-  }
-
-  .search,
-  .search-form,
-  .menu,
-  .user {
+  .search, .search-form {
     display: none;
   }
 
   .product-card {
     width: 40%;
-  }
+  } 
 
   .container-products {
     gap: 60px;
   }
 
-  .container-details {
-    flex-direction: column;
-    width: 70%;
-    text-align: center;
-    height: 60vh;
-    overflow: auto;
-    padding: 10px;
-  }
+  
 }
 
 @media (max-width: 480px) {
+
+  header {
+    flex-direction: column;
+    height: auto;
+  }
+  
+  .navigation {
+    flex-direction: column;
+    height: auto;
+    padding: 10px;
+    border: 1px solid red;
+  }
+  .user, .menu {
+    flex-direction: column;
+    width: 100%;
+    background-color: black;
+    border: 1px solid white;
+  }
+
+  .user li a, .menu li a {
+    color: white;
+    text-align: center;
+  }
+
+  .user li, .menu li {
+    width: 100%;
+    border: solid 1px white;
+    text-align: center;
+  }
+
   .container-details {
-    width: 90%;
+    flex-direction: column;
+  }
+
+  .container-receta{
+    width: 100%;
+    height: auto;
+    margin-bottom: 100px;
+  }
+
+  .name-receta-detalle{
+    text-align: center;
   }
 
   .product-card {
-    width: 90%;
+    width: 100%;
   }
 
   .column-medium {
